--- a/package.json
+++ b/package.json
@@ -1,11 +1,17 @@
 {
+  "name": "mi-app-react",
+  "version": "1.0.0",
+  "private": true,
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^7.5.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "5.0.1"
   },
-  "devDependencies": {
-    "react-scripts": "^5.0.1",
-    "typescript": "^4.9.5"
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   }
 }
